--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,11 @@ testlist:
   servers:
     - dev.example.com
     - test.example.com
+
+spring:
+  redis:
+    host: localhost
+    port: 6379
+  cache:
+    cache-names: cacheAreaTest
+
