--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,19 @@ testlist:
   servers:
     - dev.example.com
     - test.example.com
-
 spring:
   redis:
     host: localhost
     port: 6379
+    database: 0
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: 1ms
+        max-idle: 10
+        min-idle: 5
+      shutdown-timeout: 100ms
+
   cache:
     cache-names: cacheAreaTest
 
